<resources>
    <string name="app_name">FPL</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="welcome">Welcome!</string>

    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="alreadyRegistered">Registered User ? <u>Login Here</u></string>
    <string name="notRegistered">Still not registered ? <u>Click Here</u></string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="forgotPasswordRecovery">Enter registered email ID</string>

    <string name="managerName">Kaustav Banerjee</string>
    <string name="teamName">F.C. Porto</string>
</resources>
